# rtl_channels

./: LICENSE  README.md  pyproject.toml
src/channels/: .env  __init__.py  freqs.pkl  freqs.py  multisymlink.ps1
src/rtl__channels/: __init__.py  channels.py  freq.json  freqs.py  pager.json
src/rtl_channels.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
